# fxr-binary-reader

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-AL2  LICENSE-MIT  README.md  rustfmt.toml
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/gui/src/gui/: mod.rs  view.rs
crates/injection/src/: lib.rs
crates/reader/: Cargo.toml
crates/reader/src/fxr/: fxr_parser_with_sections.rs  mod.rs  parse_section_1_tree.rs  util.rs
crates/reader/src/fxr/parse_section_6_nested/: mod.rs  parse_section_7_nested.rs
src/: lib.rs  main.rs
src/fxr/: fxr_parser_with_sections.rs  mod.rs  parse_section_1_tree.rs  parse_section_3_tree.rs  parse_section_4_tree.rs  parse_section_6_nested.rs  parse_section_7_nested.rs  util.rs  view.rs
src/fxr/parse_section_6_nested/: mod.rs  parse_section_7_nested.rs
src/gui/: mod.rs
