[package]
name = "fxr-binary-reader"
version = "0.1.0"
edition = "2024"

[lib]
name = "fxr_binary_reader"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.0", features = ["derive"] }
crash-handler = "0.6"
crossterm = "0.28.1"
insta = "1.42.2"
log = "0.4"
memmap2 = "*"
ratatui = "0.28.1"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
serde-reflection = "0.5.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-panic = "0.1"
ratatui-tree-widget = { git = "https://github.com/chozandrias76/ratatui-tree-widget", version = "*" }
validator = { version = "0.19", features = ["derive"] }
zerocopy = { version = "0.8.24" }
zerocopy-derive = "0.8.24"


[features]
debug = []

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
enum_glob_use = "deny"
