[workspace]
resolver = "2"
members = [
    "crates/reader",
    "crates/gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/chozandrias76/fxr-binary-reader"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
log = "0.4"
gui = { path = "crates/gui", version = "0.1.0", package = "gui" }
reader = { path = "crates/reader", version = "0.1.0", package = "reader" }
serde = { version = "1", features = ["derive"] }
serde-reflection = "0.5.0"
serde_json = "*"
zerocopy = { version = "0.8.24" }
zerocopy-derive = "0.8.24"

[workspace.dependencies.tracing-tracy]
version = "0.11.3"
features = ["enable"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"