[package]
name = "gui"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.40"
crash-handler = "0.6"
crossterm = "0.28.1"
memmap2 = "< 1.0"
log.workspace = true
ratatui = "0.28.1"
ratatui-tree-widget = { git = "https://github.com/chozandrias76/ratatui-tree-widget", version = "*" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
serde-reflection.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
zerocopy.workspace = true
zerocopy-derive.workspace = true
reader.workspace = true


[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
enum_glob_use = "deny"
