[package]
name = "reader"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "fxr_binary_reader"
path = "src/lib.rs"

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-reflection.workspace = true
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
zerocopy.workspace = true
zerocopy-derive.workspace = true

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
enum_glob_use = "deny"
